파일 접근에 대한 책임을 분리